<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".main.MainActivity">

    <include layout="@layout/toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="16dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/welcome_text"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="24sp"
                app:fontFamily="@font/opensans_bold" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/andela_alc"
                tools:ignore="ContentDescription" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <Button
                android:id="@+id/btn_about_alc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/btn_semi_rounded_primary"
                android:padding="16dp"
                android:text="@string/about_alc"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp"
                app:fontFamily="@font/ubuntu_medium" />

            <Button
                android:id="@+id/btn_my_profile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/btn_semi_rounded_primary"
                android:padding="16dp"
                android:text="@string/my_profile"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp"
                app:fontFamily="@font/ubuntu_medium" />

        </LinearLayout>


    </LinearLayout>

</LinearLayout>